--- a/OrderProcessingApplication.Tests/OrderProcessingApplication.Tests.csproj
+++ b/OrderProcessingApplication.Tests/OrderProcessingApplication.Tests.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
+    <PackageReference Include="Moq" Version="4.16.1" />
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
     <PackageReference Include="coverlet.collector" Version="1.2.0" />
@@ -17,6 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\OrderProcessingApplication.BusinessRules\OrderProcessingApplication.BusinessRules.csproj" />
+    <ProjectReference Include="..\OrderProcessingApplication.Repository\OrderProcessingApplication.Repository.csproj" />
   </ItemGroup>
 
 </Project>
